syntax = "proto3";

package weather;

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
  rpc GetMetrics (MetricsRequest) returns (MetricsResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  double temperature = 1;
  double humidity = 2;
  string description = 3;
}

message MetricsRequest {
}

message MetricsResponse {
  string metrics = 1;
}