export const GRPC_METHODS = {
  EMAIL: {
    SEND_EMAIL: 'SendEmail',
  },
  NOTIFICATION: {
    SEND_NOTIFICATION: 'SendNotification',
  },
  SUBSCRIPTION: {
    SUBSCRIBE: 'Subscribe',
    CONFIRM: 'Confirm',
    UNSUBSCRIBE: 'Unsubscribe',
    GET_BY_FREQUENCY: 'GetByFrequency',
  },
  WEATHER: {
    GET_WEATHER: 'GetWeather',
    GET_METRICS: 'GetMetrics',
  },
};
